# concat_const

./: Cargo.toml  README.md
src/: lib.rs  slices.rs
tests/: slices.rs  test.rs
