[package]
name = "concat_const"
version = "0.1.0"
authors = ["Dmitry Rodionov <gh@rdmtr.com>"]
description = "const `&[u8]` and `&str` concatenation"
keywords = ["concat", "concatenate", "const"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "concat_const"
path = "src/lib.rs"
