[package]
name = "concat_const"
version = "0.2.0"
authors = ["Dmitry Rodionov <gh@rdmtr.com>"]
description = "const `&[u8]` and `&str` concatenation"
repository = "https://github.com/RoDmitry/concat_const"
documentation = "https://docs.rs/concat_const/"
keywords = ["concat", "concatenate", "const"]
categories = ["rust-patterns", "no-std"]
include = ["/src"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "concat_const"
path = "src/lib.rs"
